# pyodbc

./: .gitignore  meson.build  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
src/: cursor.cpp  cursor.h  pyodbcmodule.cpp
